Update 프로그래밍 전용 리포트 개발(12.30).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.30).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.30).md
@@ -71,8 +71,9 @@ go_alv_grid->set_table_for_first_display(    " PBO
 </br>
 </br>
 
-### 2)
-
+### 2) ALV Field Catalog
+- `LVC_T_FCAT` → Field Catalog 전체를 담는 내부테이블
+- `LVC_S_FCAT` → 컬럼 1개에 대한 속성 구조
 </br>
 </br>
 
