--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.30).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.30).md
@@ -75,6 +75,21 @@ go_alv_grid->set_table_for_first_display(    " PBO
 - `LVC_T_FCAT` → Field Catalog 전체를 담는 내부테이블
 - `LVC_S_FCAT` → 컬럼 1개에 대한 속성 구조
 </br>
+
+**1) 전역 구조(DDIC) 필드 그대로 사용하는 경우**
+- FIELDNAME만 지정
+- REF_FIELD / REF_TABLE 자동
+- 추가 설정 거의 없음
+  
+**2) 전역 구조 필드 + 속성 조정하는 경우**
+- FIELDNAME + REF_FIELD + REF_TABLE
+- 길이·텍스트 등만 추가 설정
+**3) 로컬 타입(내부 정의 타입) 사용하는 경우**
+- FIELDNAME만 공통
+- REF_FIELD / REF_TABLE 사용 ❌
+- 컬럼 속성 전부 직접 정의
+
+</br>
 </br>
 
 ---
