--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.30).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.30).md
@@ -93,6 +93,51 @@ go_alv_grid->set_table_for_first_display(    " PBO
 - `REF_FIELD` / `REF_TABLE` 사용 ❌
 - 컬럼 속성 전부 직접 정의
 
+```abap
+" 출력 구조 (기존 DDIC + 추가 컬럼)
+TYPES: BEGIN OF <gs_type>.
+  INCLUDE TYPE <DDIC_STRUCTURE>.
+  <add_field_1> TYPE <ddic_type_1>.
+  <add_field_2> TYPE <ddic_type_2>.
+END OF <gs_type>.
+
+DATA: <gt_outtab> TYPE TABLE OF <gs_type>.
+
+" Field Catalog 선언
+DATA:
+  <gt_fcat> TYPE lvc_t_fcat,
+  <gs_fcat> TYPE lvc_s_fcat.
+
+" 추가 컬럼 1
+<gs_fcat>-fieldname = '<ADD_FIELD_1>'.
+<gs_fcat>-ref_field = '<REF_FIELD>'.
+<gs_fcat>-ref_table = '<REF_TABLE>'.
+<gs_fcat>-col_pos   = <N>.
+APPEND <gs_fcat> TO <gt_fcat>.
+CLEAR <gs_fcat>.
+
+" 추가 컬럼 2 (아이콘 등 표현 변경)
+<gs_fcat>-fieldname = '<ADD_FIELD_2>'.
+<gs_fcat>-icon      = 'X'.
+<gs_fcat>-coltext   = '<TEXT>'.
+APPEND <gs_fcat> TO <gt_fcat>.
+CLEAR <gs_fcat>.
+
+" 기존 컬럼 숨김
+<gs_fcat>-fieldname = '<ORIGINAL_FIELD>'.
+<gs_fcat>-no_out    = 'X'.
+APPEND <gs_fcat> TO <gt_fcat>.
+CLEAR <gs_fcat>.
+
+" ALV 출력
+<go_alv>->set_table_for_first_display(
+  EXPORTING
+    i_structure_name = '<DDIC_STRUCTURE>'
+  CHANGING
+    it_outtab        = <gt_outtab>
+    it_fieldcatalog  = <gt_fcat>
+).
+```
 </br>
 </br>
 
