Update 프로그래밍 전용 리포트 개발(12.30).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.30).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.30).md
@@ -77,6 +77,10 @@ go_alv_grid->set_table_for_first_display(    " PBO
 - `FIELDNAME` → 내부테이블의 컬럼명
 - `REF_FIELD` → DDIC에서 참조할 필드명
 - `REF_TABLE` → DDIC에서 참조할 테이블/구조명
+- `ICON` → 컬럼 값을 아이콘으로 표시
+- `NO_OUT` → 컬럼을 화면에서 숨김 (데이터는 유지)
+- `COLTEXT` → 컬럼 헤더에 표시될 텍스트
+- `COL_POS` → 컬럼 출력 순서 지정
 </br>
 </br>
 
