Update 프로그래밍 전용 리포트 개발(12.30).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.30).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.30).md
@@ -79,10 +79,10 @@ go_alv_grid->set_table_for_first_display(    " PBO
 - `FIELDNAME` → 내부테이블의 컬럼명
 - `REF_FIELD` → DDIC에서 참조할 필드명
 - `REF_TABLE` → DDIC에서 참조할 테이블/구조명
-- `ICON` → 컬럼 값을 아이콘으로 표시
-- `NO_OUT` → 컬럼을 화면에서 숨김 (데이터는 유지)
-- `COLTEXT` → 컬럼 헤더에 표시될 텍스트
-- `COL_POS` → 컬럼 출력 순서 지정
+- `ICON` → `X` 면 아이콘으로 표시, 공백이면 일반 값
+- `NO_OUT` → `X` 면 컬럼을 ALV 화면에서 숨김, 공백이면 정상 표시
+- `COLTEXT` → 컬럼 헤더에 표시될 제목 문자열, 미지정 시 DDIC 텍스트 사용
+- `COL_POS` → 컬럼의 출력 위치 번호, 숫자가 작을수록 왼쪽에 표시
 </br>
 </br>
 
