Update 프로그래밍 전용 리포트 개발(12.30).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.30).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.30).md
@@ -112,9 +112,8 @@ END OF <gs_type>.
 DATA: <gt_outtab> TYPE TABLE OF <gs_type>.
 
 " Field Catalog 선언
-DATA:
-  <gt_fcat> TYPE lvc_t_fcat,
-  <gs_fcat> TYPE lvc_s_fcat.
+DATA: <gt_fcat> TYPE lvc_t_fcat,
+      <gs_fcat> TYPE lvc_s_fcat.
 
 " 추가 컬럼 1
 <gs_fcat>-fieldname = '<ADD_FIELD_1>'.
@@ -144,6 +143,45 @@ CLEAR <gs_fcat>.
   CHANGING
     it_outtab        = <gt_outtab>
     it_fieldcatalog  = <gt_fcat>
+).
+```
+```abap
+" 출력 구조
+DATA: BEGIN OF gs_data.
+        INCLUDE TYPE sbook.
+DATA: cancelled_icon TYPE icon-id,        " TOP
+     END OF gs_data.
+DATA gt_data LIKE TABLE OF gs_data.
+
+" Field Catalog 선언
+DATA: gt_fcat TYPE LVC_T_FCAT,
+      gs_fcat TYPE LVC_S_FCAT.
+
+" 데이터 가공 : 취소 여부 → 아이콘 세팅
+LOOP AT gt_data INTO gs_data.
+  IF gs_data-cancelled = 'X'.
+    gs_data-cancelled_icon = ICON_CANCEL.
+  ENDIF.
+
+  MODIFY gt_data FROM gs_data
+    TRANSPORTING cancelled_icon.
+  CLEAR gs_data.
+ENDLOOP.
+
+" 컬럼
+gs_fcat-fieldname = 'CANCELLED_ICON'.      " F01
+gs_fcat-icon = 'X'.
+gs_fcat-coltext = 'Cancelled'.
+APPEND gs_fcat TO gt_fcat.
+CLEAR gs_fcat.
+
+" ALV 출력
+go_alv_grid->set_table_for_first_display(
+  EXPORTING
+    i_structure_name = 'SBOOK'
+  CHANGING
+    it_outtab        = gt_data
+    it_fieldcatalog  = gt_fcat
 ).
 ```
 </br>
