Update 프로그래밍 전용 리포트 개발(12.30).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.30).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.30).md
@@ -22,6 +22,7 @@
 ## < ABAP 객체 생성 기본 문법 >
 </br>
 
+
 ### 1) ALV 표준 툴바 버튼 제어
 - ALV Grid에서 기본 제공되는 표준 버튼(필터, 합계 등)을 화면에서 숨김 → 기능은 유지되고 화면에서만 제거
 </br>
@@ -146,36 +147,101 @@ CLEAR <gs_fcat>.
 ).
 ```
 ```abap
-" 출력 구조
+*---------------------------------------------------------------------*
+* TOP 영역 (데이터 구조 / 타입 선언)
+*---------------------------------------------------------------------*
+TYPE-POOLS: icon.
+
 DATA: BEGIN OF gs_data.
         INCLUDE TYPE sbook.
-DATA: cancelled_icon TYPE icon-id,        " TOP
-     END OF gs_data.
+DATA:   cancelled_icon TYPE icon-id,
+        phone          TYPE scustom-telephone,
+      END OF gs_data.
+
 DATA gt_data LIKE TABLE OF gs_data.
 
-" Field Catalog 선언
-DATA: gt_fcat TYPE LVC_T_FCAT,
-      gs_fcat TYPE LVC_S_FCAT.
+DATA: BEGIN OF ls_custom,
+        id        TYPE s_customer,
+        telephone TYPE s_phoneno,
+      END OF ls_custom.
+DATA lt_custom LIKE TABLE OF ls_custom.
 
-" 데이터 가공 : 취소 여부 → 아이콘 세팅
+DATA: gt_fcat TYPE lvc_t_fcat,
+      gs_fcat TYPE lvc_s_fcat.
+
+*---------------------------------------------------------------------*
+* 데이터 조회
+*---------------------------------------------------------------------*
+SELECT *
+  FROM sbook
+  INTO CORRESPONDING FIELDS OF TABLE gt_data.
+
+*---------------------------------------------------------------------*
+* 전화번호 조회 (SCUSTOM)
+*---------------------------------------------------------------------*
+SELECT id telephone
+  FROM scustom
+  INTO TABLE lt_custom
+  FOR ALL ENTRIES IN gt_data
+  WHERE id = gt_data-customid
+    AND telephone <> space.
+
+*---------------------------------------------------------------------*
+* 데이터 가공 (아이콘 / 전화번호 세팅)
+*---------------------------------------------------------------------*
 LOOP AT gt_data INTO gs_data.
+
+  " 취소 아이콘
   IF gs_data-cancelled = 'X'.
-    gs_data-cancelled_icon = ICON_CANCEL.
+    gs_data-cancelled_icon = icon_cancel.
+  ENDIF.
+
+  " 전화번호 매핑
+  READ TABLE lt_custom INTO ls_custom
+       WITH KEY id = gs_data-customid.
+  IF sy-subrc = 0.
+    gs_data-phone = ls_custom-telephone.
   ENDIF.
 
   MODIFY gt_data FROM gs_data
-    TRANSPORTING cancelled_icon.
+    TRANSPORTING cancelled_icon phone.
   CLEAR gs_data.
 ENDLOOP.
 
-" 컬럼
-gs_fcat-fieldname = 'CANCELLED_ICON'.      " F01
-gs_fcat-icon = 'X'.
-gs_fcat-coltext = 'Cancelled'.
-APPEND gs_fcat TO gt_fcat.
+*---------------------------------------------------------------------*
+* Field Catalog 설정
+*---------------------------------------------------------------------*
 CLEAR gs_fcat.
+gs_fcat-fieldname = 'CANCELLED_ICON'.
+gs_fcat-icon      = 'X'.
+gs_fcat-coltext   = 'Cancelled'.
+APPEND gs_fcat TO gt_fcat.
 
-" ALV 출력
+CLEAR gs_fcat.
+gs_fcat-fieldname = 'CANCELLED'.
+gs_fcat-no_out    = 'X'.
+APPEND gs_fcat TO gt_fcat.
+
+CLEAR gs_fcat.
+gs_fcat-fieldname = 'PASSFORM'.
+gs_fcat-no_out    = 'X'.
+APPEND gs_fcat TO gt_fcat.
+
+CLEAR gs_fcat.
+gs_fcat-fieldname = 'PASSBIRTH'.
+gs_fcat-no_out    = 'X'.
+APPEND gs_fcat TO gt_fcat.
+
+CLEAR gs_fcat.
+gs_fcat-fieldname = 'PHONE'.
+gs_fcat-ref_field = 'TELEPHONE'.
+gs_fcat-ref_table = 'SCUSTOM'.
+gs_fcat-col_pos   = 4.
+APPEND gs_fcat TO gt_fcat.
+
+*---------------------------------------------------------------------*
+* ALV 출력
+*---------------------------------------------------------------------*
 go_alv_grid->set_table_for_first_display(
   EXPORTING
     i_structure_name = 'SBOOK'
