Update 프로그래밍 전용 리포트 개발(12.30).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.30).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.30).md
@@ -212,31 +212,31 @@ ENDLOOP.
 * Field Catalog 설정
 *---------------------------------------------------------------------*
 CLEAR gs_fcat.
-gs_fcat-fieldname = 'CANCELLED_ICON'.
-gs_fcat-icon      = 'X'.
-gs_fcat-coltext   = 'Cancelled'.
+gs_fcat-fieldname = 'CANCELLED_ICON'.   " 취소 여부를 표시할 아이콘 컬럼
+gs_fcat-icon      = 'X'.                " 컬럼 값을 아이콘으로 표시
+gs_fcat-coltext   = 'Cancelled'.        " 컬럼 헤더 텍스트
 APPEND gs_fcat TO gt_fcat.
 
 CLEAR gs_fcat.
-gs_fcat-fieldname = 'CANCELLED'.
-gs_fcat-no_out    = 'X'.
+gs_fcat-fieldname = 'CANCELLED'.        " 기존 취소 여부 컬럼
+gs_fcat-no_out    = 'X'.                " 화면에서 숨김
 APPEND gs_fcat TO gt_fcat.
 
 CLEAR gs_fcat.
-gs_fcat-fieldname = 'PASSFORM'.
-gs_fcat-no_out    = 'X'.
+gs_fcat-fieldname = 'PASSFORM'.         " 여권 형식 컬럼
+gs_fcat-no_out    = 'X'.                " 화면에서 숨김
 APPEND gs_fcat TO gt_fcat.
 
 CLEAR gs_fcat.
-gs_fcat-fieldname = 'PASSBIRTH'.
-gs_fcat-no_out    = 'X'.
+gs_fcat-fieldname = 'PASSBIRTH'.        " 여권 생년월일 컬럼
+gs_fcat-no_out    = 'X'.                " 화면에서 숨김
 APPEND gs_fcat TO gt_fcat.
 
 CLEAR gs_fcat.
-gs_fcat-fieldname = 'PHONE'.
-gs_fcat-ref_field = 'TELEPHONE'.
-gs_fcat-ref_table = 'SCUSTOM'.
-gs_fcat-col_pos   = 4.
+gs_fcat-fieldname = 'PHONE'.            " 고객 전화번호 컬럼
+gs_fcat-ref_field = 'TELEPHONE'.        " SCUSTOM-TELEPHONE 참조
+gs_fcat-ref_table = 'SCUSTOM'.          " 전화번호 타입 DDIC 참조
+gs_fcat-col_pos   = 4.                  " 컬럼 출력 위치 지정
 APPEND gs_fcat TO gt_fcat.
 
 *---------------------------------------------------------------------*
