Update 프로그래밍 전용 리포트 개발(12.30).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.30).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.30).md
@@ -170,15 +170,12 @@ DATA: gt_fcat TYPE lvc_t_fcat,
       gs_fcat TYPE lvc_s_fcat.
 
 *---------------------------------------------------------------------*
-* 데이터 조회
+* F01 영역 (데이터 조회)
 *---------------------------------------------------------------------*
 SELECT *
   FROM sbook
   INTO CORRESPONDING FIELDS OF TABLE gt_data.
 
-*---------------------------------------------------------------------*
-* 전화번호 조회 (SCUSTOM)
-*---------------------------------------------------------------------*
 SELECT id telephone
   FROM scustom
   INTO TABLE lt_custom
@@ -187,7 +184,7 @@ SELECT id telephone
     AND telephone <> space.
 
 *---------------------------------------------------------------------*
-* 데이터 가공 (아이콘 / 전화번호 세팅)
+* F01 영역 - 데이터 가공 (아이콘 / 전화번호 세팅)
 *---------------------------------------------------------------------*
 LOOP AT gt_data INTO gs_data.
 
@@ -209,7 +206,7 @@ LOOP AT gt_data INTO gs_data.
 ENDLOOP.
 
 *---------------------------------------------------------------------*
-* Field Catalog 설정
+* F01 영역 - Field Catalog 설정
 *---------------------------------------------------------------------*
 CLEAR gs_fcat.
 gs_fcat-fieldname = 'CANCELLED_ICON'.   " 취소 여부를 표시할 아이콘 컬럼
@@ -240,7 +237,7 @@ gs_fcat-col_pos   = 4.                  " 컬럼 출력 위치 지정
 APPEND gs_fcat TO gt_fcat.
 
 *---------------------------------------------------------------------*
-* ALV 출력
+* PBO 영역 - ALV 출력
 *---------------------------------------------------------------------*
 go_alv_grid->set_table_for_first_display(
   EXPORTING
