Update 프로그래밍 전용 리포트 개발(12.30).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.30).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.30).md
@@ -85,6 +85,12 @@ go_alv_grid->set_table_for_first_display(    " PBO
 - `COLTEXT` → 컬럼 헤더에 표시될 제목 문자열, 미지정 시 DDIC 텍스트 사용
 - `COL_POS` → 컬럼의 출력 위치 번호, 숫자가 작을수록 왼쪽에 표시
 </br>
+
+- `CFIELDNAME` → 금액 컬럼에 대해 행별로 적용할 통화 필드명을 지정함
+- `CURRENCY` → 금액 컬럼 전체에 고정 통화 코드를 적용함
+- `QFIELDNAME` → 수량 컬럼에 대해 행별로 적용할 단위 필드명을 지정함
+- `QUANTITY` → 수량 컬럼 전체에 고정 단위를 적용함
+</br>
 </br>
 
 **1) 전역 구조(DDIC) 필드 그대로 사용하는 경우**
