Update 프로그래밍 전용 리포트 개발(12.30).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.30).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.30).md
@@ -73,13 +73,18 @@ go_alv_grid->set_table_for_first_display(    " PBO
 </br>
 
 ### 2) ALV Field Catalog
+- ALV 컬럼의 제목, 순서, 숨김, 아이콘·단위 등 화면 표시 방식을 제어하는 설정
+- 구조에 없는 컬럼을 추가하거나, 기존 컬럼의 출력 형태를 변경하기 위해 사용
 - `LVC_T_FCAT` → Field Catalog 전체를 담는 내부테이블
 - `LVC_S_FCAT` → 컬럼 1개에 대한 속성 구조
 </br>
 
+**1) 기본 컬럼 정의 / DDIC 참조**
 - `FIELDNAME` → 내부테이블의 컬럼명
 - `REF_FIELD` → DDIC에서 참조할 필드명
 - `REF_TABLE` → DDIC에서 참조할 테이블/구조명
+
+**2) 컬럼 표시 방식 제어**
 - `ICON` → `X` 면 아이콘으로 표시, 공백이면 일반 값
 - `NO_OUT` → `X` 면 컬럼을 ALV 화면에서 숨김, 공백이면 정상 표시
 - `COLTEXT` → 컬럼 헤더에 표시될 제목 문자열, 미지정 시 DDIC 텍스트 사용
