Update 프로그래밍 전용 리포트 개발(12.30).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.30).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.30).md
@@ -86,10 +86,41 @@ go_alv_grid->set_table_for_first_display(    " PBO
 
 **2) 컬럼 표시 방식 제어**
 - `ICON` → `X` 면 아이콘으로 표시, 공백이면 일반 값
+- `CHECKBOX` → `X` 면 값을 읽기 전용 체크박스로 표시하고, 공백이면 일반 값으로 표시
 - `NO_OUT` → `X` 면 컬럼을 ALV 화면에서 숨김, 공백이면 정상 표시
+- `TECH` → `X` 면 기술용 컬럼으로 처리하고, 공백이면 일반 사용자 컬럼으로 표시
+
+**3) 컬럼 제목 / 위치 / 크기**
 - `COLTEXT` → 컬럼 헤더에 표시될 제목 문자열, 미지정 시 DDIC 텍스트 사용
 - `COL_POS` → 컬럼의 출력 위치 번호, 숫자가 작을수록 왼쪽에 표시
+- `OUTPUTLEN` → 컬럼 출력 폭(너비)
+
+**4) 금액(Currency) / 수량(Unit) 포맷 설정**
+- `CFIELDNAME` → 금액 컬럼에 대해 행별 통화 필드 지정
+- `CURRENCY` → 금액 컬럼 전체에 고정 통화 코드 적용
+- `QFIELDNAME` → 수량 컬럼에 대해 행별 단위 필드 지정
+- `QUANTITY` → 수량 컬럼 전체에 고정 단위 적용
+
+**5) 집계 / 키 / 인터랙션**
+- `DO_SUM` → `X` 면 합계 라인을 생성하고, 공백이면 합계 계산 안 함
+- `NO_SUM` → `X` 면 합계 기능을 비활성화하고, 공백이면 합계 가능
+- `KEY` → `X` 면 키 컬럼으로 고정 표시되고, 공백이면 일반 컬럼
+- `HOTSPOT` → `X` 면 클릭 이벤트가 발생하고, 공백이면 일반 텍스트 컬럼
+
+**6) 강조 / 값 표시 포맷**
+- `EMPHASIZE` → 컬럼 값을 색상·강조·반전 효과로 표시
+- `DECIMALS_O` → 표시할 소수점 자릿수 지정
+- `DECMLFIELD` → 소수점 자릿수를 행별 필드로 제어
+- `ROUND` → `X` 면 반올림 처리하고, 공백이면 반올림 안 함
+- `ROUNDFIELD` → 반올림 자릿수를 행별 필드로 제어
+- `EDIT_MASK` → 출력 시 편집 마스크 적용
+- `JUST` → 값 정렬 방식(L/R/C) 지정
+- `LZERO` → `X` 면 앞의 0을 표시하고, 공백이면 0 제거
+- `NO_ZERO` → `X` 면 값이 0일 때 표시하지 않고, 공백이면 0 표시
+- `NO_SIGN` → `X` 면 부호(+/–)를 숨기고, 공백이면 부호 표시
+  
 </br>
+
 
 - `CFIELDNAME` → 금액 컬럼에 대해 행별로 적용할 통화 필드명을 지정함
 - `CURRENCY` → 금액 컬럼 전체에 고정 통화 코드를 적용함
