Update 프로그래밍 전용 리포트 개발(12.30).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.30).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.30).md
@@ -185,7 +185,7 @@ CLEAR <gs_fcat>.
 ```
 ```abap
 *---------------------------------------------------------------------*
-* TOP 영역 (데이터 구조 / 타입 선언)
+* TOP 영역 - 데이터 구조 / 타입 선언
 *---------------------------------------------------------------------*
 TYPE-POOLS: icon.
 
@@ -206,7 +206,7 @@ DATA: gt_fcat TYPE lvc_t_fcat,
       gs_fcat TYPE lvc_s_fcat.
 
 *---------------------------------------------------------------------*
-* F01 영역 (데이터 조회)
+* F01 영역 - 데이터 조회
 *---------------------------------------------------------------------*
 SELECT *
   FROM sbook
