Update 프로그래밍 전용 리포트 개발(12.30).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.30).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.30).md
@@ -261,25 +261,30 @@ gs_fcat-no_out    = 'X'.
 APPEND gs_fcat TO gt_fcat.
 
 CLEAR gs_fcat.
-gs_fcat-fieldname = 'PASSBIRTH'.        
+gs_fcat-fieldname = 'PASSBIRTH'.        " → 여권 생년월일 컬럼 숨김   
 gs_fcat-no_out    = 'X'.             
 APPEND gs_fcat TO gt_fcat.
 
 CLEAR gs_fcat.
 gs_fcat-fieldname = 'PHONE'.            
-gs_fcat-ref_field = 'TELEPHONE'.       
+gs_fcat-ref_field = 'TELEPHONE'.        " → 전화번호 컬럼을 SCUSTOM 기준으로 참조하여 4번째 위치에 표시
 gs_fcat-ref_table = 'SCUSTOM'.          
 gs_fcat-col_pos   = 4.                 
 APPEND gs_fcat TO gt_fcat.
 
 CLEAR gs_fcat.
-gs_fcat-fieldname = 'SMOKER'.
+gs_fcat-fieldname = 'SMOKER'.           " → 흡연 여부 체크박스로 표시
 gs_fcat-checkbox = 'X'.
 APPEND gs_fcat TO gt_fcat.
 
 CLEAR gs_fcat.
-gs_fcat-fieldname = 'INVOICE'.
+gs_fcat-fieldname = 'INVOICE'.          " → 송장 여부 체크박스로 표시
 gs_fcat-checkbox = 'X'.
+APPEND gs_fcat TO gt_fcat.
+
+CLEAR gs_fcat.
+gs_fcat-fieldname = 'CLASS'.            " → 컬럼을 색상(C5) + 강조 효과로 표시
+gs_fcat-emphasize = 'C510'.
 APPEND gs_fcat TO gt_fcat.
 
 *---------------------------------------------------------------------*
