Update 프로그래밍 전용 리포트 개발(12.29).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
@@ -204,7 +204,8 @@ ENDLOOP.
 
 - `lvc_s_sort` : 정렬 기준 1개, `lvc_t_sort` : 정렬 기준 여러 개를 담는 테이블
 - `spos` : 정렬 우선순위 (1, 2, 3 …)
-- `up = 'X'` : 오름차순, `down` = 'X' : 내림차순
+- `up = 'X'` : 오름차순, `down = 'X'` : 내림차순
+- `SUBTOT = 'X'` : 해당 정렬 필드 기준으로 소계(Subtotal) 라인을 출력함
 ```abap
 DATA: gt_sort TYPE lvc_t_sort,
       gs_sort TYPE lvc_s_sort.
