Update 프로그래밍 전용 리포트 개발(12.30).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.30).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.30).md
@@ -530,3 +530,126 @@ ENDMODULE.
 </br>
 
 ### 실습 2
+- Field Catalog 실습
+- 위 코드 이어서 작성
+</br>
+</br>
+
+**1) `TOP` 모듈 수정**
+```abap
+DATA: gt_fcat TYPE LVC_T_FCAT,
+      gs_fcat TYPE LVC_S_FCAT.
+
+DATA: BEGIN OF gs_flight.
+        INCLUDE TYPE sflight.
+DATA: excp TYPE CHAR1,
+      color TYPE C LENGTH 4,
+      lt_field_colors TYPE LVC_T_SCOL,
+      changes_possible TYPE icon-id,
+      END OF gs_flight.
+DATA: gt_flight LIKE TABLE OF gs_flight.
+```
+</br>
+</br>
+
+**2) `F01` 모듈 수정**
+```abap
+TYPE-POOLS: COL, ICON.
+
+FORM get_data.
+  SELECT * FROM sflight
+    INTO CORRESPONDING FIELDS OF TABLE gt_flight
+    WHERE carrid IN so_car
+      AND connid IN so_con.
+  IF sy-subrc <> 0.
+    MESSAGE '데이터가 존재하지 않습니다.' TYPE 'E'.
+  ELSE.
+    LOOP AT gt_flight INTO gs_flight.
+      IF gs_flight-seatsocc = 0.
+        gs_flight-excp = '1'.
+      ELSEIF gs_flight-seatsocc < 50.
+        gs_flight-excp = '2'.
+      ELSE.
+        gs_flight-excp = '3'.
+      ENDIF.
+
+      IF gs_flight-fldate+4(2) = sy-datum+4(2).
+        gs_flight-color = 'C' && col_negative && 10.
+      ENDIF.
+
+      IF gs_flight-fldate < sy-datum.
+        gs_flight-changes_possible = ICON_SPACE.
+      ELSE.
+        gs_flight-changes_possible = ICON_OKAY.
+      ENDIF.
+
+      IF gs_flight-PLANETYPE = '747-400'.
+        ls_field_colors-fname = 'PLANETYPE'.
+        ls_field_colors-color-col = col_positive.
+        ls_field_colors-color-int = '1'.
+        ls_field_colors-color-inv = '0'.
+        APPEND ls_field_colors TO gs_flight-lt_field_colors.
+      ENDIF.
+
+      MODIFY gt_flight FROM gs_flight
+        TRANSPORTING excp color lt_field_colors changes_possible.
+      CLEAR gs_flight.
+    ENDLOOP.
+  ENDIF.
+ENDFORM.
+
+*&---------------------------------------------------------------------*
+
+FORM set_fcat.
+  CLEAR gs_fcat.
+  gs_fcat-fieldname = 'SEATSOCC'.
+  gs_fcat-do_sum = 'X'.
+  APPEND gs_fcat TO gt_fcat.
+
+  CLEAR gs_fcat.
+  gs_fcat-fieldname = 'PAYMENTSUM'.
+  gs_fcat-no_out = 'X'.
+  APPEND gs_fcat TO gt_fcat.
+
+  CLEAR gs_fcat.
+  gs_fcat-fieldname = 'CHANGES_POSSIBLE'.
+  gs_fcat-icon = 'X'.
+  gs_fcat-coltext = 'Changes Possible'.
+  gs_fcat-col_pos = 5.
+  APPEND gs_fcat TO gt_fcat.
+
+  CLEAR gs_fcat.
+  gs_fcat-fieldname = 'EXCP'.
+  gs_fcat-coltext = 'traffic light'.
+  APPEND gs_fcat TO gt_fcat.
+ENDFORM.
+```
+</br>
+</br>
+
+**3) `PBO` 모듈 수정**
+```abap
+PERFORM set_layout.
+PERFORM set_fcat.
+CALL METHOD go_alv_grid->set_table_for_first_display
+  EXPORTING
+    i_structure_name              = 'SFLIGHT'
+    is_variant                    = gs_variant
+    i_save                        = 'A'
+    is_layout                     = gs_layout
+  CHANGING
+    it_outtab                     = gt_flight
+    IT_FIELDCATALOG               = gt_fcat
+  EXCEPTIONS
+    invalid_parameter_combination = 1
+    program_error                 = 2
+    too_many_lines                = 3
+    others                        = 4.
+IF sy-subrc <> 0.
+  MESSAGE A012(BC405_408).
+ENDIF.
+```
+</br>
+</br>
+
+**4) 결과 출력**
