Update 프로그래밍 전용 리포트 개발(12.30).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.30).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.30).md
@@ -653,3 +653,12 @@ ENDIF.
 </br>
 
 **4) 결과 출력**
+
+<img width="426" height="328" alt="image" src="https://github.com/user-attachments/assets/25767891-bfc2-4ea2-973f-c1382470486a" />
+
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
