Update 프로그래밍 전용 리포트 개발(12.30).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.30).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.30).md
@@ -303,6 +303,11 @@ go_alv_grid->set_table_for_first_display(
     it_fieldcatalog  = gt_fcat
 ).
 ```
+
+<img width="404" height="222" alt="image" src="https://github.com/user-attachments/assets/ab6780f3-4125-4b13-b084-b37f8405f3e0" />
+
+</br>
+</br>
 </br>
 </br>
 
