Update 프로그래밍 전용 리포트 개발(12.30).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.30).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.30).md
@@ -304,7 +304,9 @@ go_alv_grid->set_table_for_first_display(
 ).
 ```
 
-<img width="404" height="222" alt="image" src="https://github.com/user-attachments/assets/ab6780f3-4125-4b13-b084-b37f8405f3e0" />
+- 결과출력
+  
+<img width="492" height="270" alt="image" src="https://github.com/user-attachments/assets/af73de96-de29-49da-a3af-76921f4f7c4b" />
 
 </br>
 </br>
