Update 프로그래밍 전용 리포트 개발(12.30).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.30).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.30).md
@@ -623,6 +623,7 @@ FORM set_fcat.
   gs_fcat-fieldname = 'CHANGES_POSSIBLE'.
   gs_fcat-icon = 'X'.
   gs_fcat-coltext = 'Changes Possible'.
+  gs_fcat-tooltip = 'Are changes still possible?'.
   gs_fcat-col_pos = 5.
   APPEND gs_fcat TO gt_fcat.
 
