Update 프로그래밍 전용 리포트 개발(12.30).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.30).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.30).md
@@ -88,7 +88,7 @@ go_alv_grid->set_table_for_first_display(    " PBO
 
 **3) 컬럼 제목 / 위치 / 크기**
 - `COLTEXT` → 컬럼 헤더에 표시될 제목 문자열, 미지정 시 DDIC 텍스트 사용
-- `tooltip` → 컬럼 헤더에 마우스를 올렸을 때 표시되는 설명 문구
+- `TOOLTIP` → 컬럼 헤더에 마우스를 올렸을 때 표시되는 설명 문구
 - `COL_POS` → 컬럼의 출력 위치 번호, 숫자가 작을수록 왼쪽에 표시
 - `OUTPUTLEN` → 컬럼 출력 폭(너비)
 
