Update 프로그래밍 전용 리포트 개발(12.30).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.30).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.30).md
@@ -668,3 +668,8 @@ ENDIF.
 </br>
 
 ### 실습 3
+</br>
+
+- 문제
+
+<img width="485" height="288" alt="image" src="https://github.com/user-attachments/assets/b550caff-ae1b-44b1-b987-1829e83d7599" />
