Update 프로그래밍 전용 리포트 개발(12.30).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.30).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.30).md
@@ -673,3 +673,23 @@ ENDIF.
 - 문제
 
 <img width="485" height="288" alt="image" src="https://github.com/user-attachments/assets/b550caff-ae1b-44b1-b987-1829e83d7599" />
+</br>
+</br>
+</br>
+
+**1) `SCREEN 100` 코드 생성**
+```abap
+INCLUDE ZBC400_B03_PRACTICE7_TOP.
+INCLUDE ZBC400_B03_PRACTICE7_F01.
+INCLUDE ZBC400_B03_PRACTICE7_O01.
+INCLUDE ZBC400_B03_PRACTICE7_I01.
+
+AT SELECTION-SCREEN ON BLOCK blk1.
+  IF so_car IS INITIAL AND so_con IS INITIAL AND so_fdt IS INITIAL.
+    MESSAGE '전부 입력하지 않았습니다.' TYPE 'E'.
+  ENDIF.
+
+START-OF-SELECTION.
+  PERFORM set_data.
+  CALL SCREEN 100.
+```
