Update 프로그래밍 전용 리포트 개발(12.30).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.30).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.30).md
@@ -670,7 +670,7 @@ ENDIF.
 </br>
 </br>
 
-**1) `SCREEN 100` 코드 생성**
+**1) `Program` 코드 생성**
 ```abap
 INCLUDE ZBC400_B03_PRACTICE7_TOP.
 INCLUDE ZBC400_B03_PRACTICE7_F01.
@@ -690,3 +690,189 @@ START-OF-SELECTION.
 
 **2) `TOP` 모듈 생성**
 ```abap
+DATA: OK_CODE TYPE sy-ucomm.
+
+DATA: go_cont TYPE REF TO cl_gui_custom_container,
+      go_alv TYPE REF TO cl_gui_alv_grid.
+
+DATA: BEGIN OF gs_data.
+        INCLUDE TYPE ZSCARRFLIGHT_B03.
+DATA: seatsrem TYPE INT4,
+      class TYPE sbook-CLASS,
+      END OF gs_data.
+DATA: gt_data LIKE TABLE OF gs_data,
+      gt_sflight TYPE TABLE OF sflight,
+      gt_scarr TYPE TABLE OF scarr,
+      gs_scarr LIKE LINE OF gt_scarr,
+      gt_sbook TYPE TABLE OF sbook,
+      gs_sbook LIKE LINE OF gt_sbook.
+
+DATA: gt_fcat TYPE LVC_T_FCAT,
+      gs_fcat TYPE LVC_S_FCAT,
+      gt_sort TYPE LVC_T_SORT,
+      gs_sort TYPE LVC_S_SORT.
+
+SELECTION-SCREEN BEGIN OF BLOCK blk1 WITH FRAME.
+  SELECT-OPTIONS: so_car FOR gs_data-carrid,
+                  so_con FOR gs_data-connid,
+                  so_fdt FOR gs_data-fldate.
+SELECTION-SCREEN END OF BLOCK blk1.
+```
+</br>
+
+**3) `F01` 모듈 생성**
+```abap
+FORM set_data.
+  SELECT carrid connid fldate price currency planetype seatsmax seatsocc
+    FROM sflight
+    INTO CORRESPONDING FIELDS OF TABLE gt_data
+    WHERE carrid IN so_car
+      AND connid IN so_con
+      AND fldate IN so_fdt.
+
+  SELECT *
+    FROM scarr
+    INTO CORRESPONDING FIELDS OF TABLE gt_scarr
+    WHERE carrid IN so_car.
+
+  SELECT *
+    FROM sbook
+    INTO CORRESPONDING FIELDS OF TABLE gt_sbook.
+
+  LOOP AT gt_data INTO gs_data.
+    READ TABLE gt_scarr INTO gs_scarr WITH KEY carrid = gs_data-carrid
+      TRANSPORTING carrname currcode.
+    READ TABLE gt_sbook INTO gs_sbook
+      WITH KEY carrid = gs_data-carrid
+               connid = gs_data-connid
+               fldate = gs_data-fldate
+      TRANSPORTING class.
+    gs_data-class = gs_sbook-class.
+    gs_data-carrname = gs_scarr-carrname.
+    gs_data-currcode = gs_scarr-currcode.
+    gs_data-seatsrem = gs_data-seatsmax - gs_data-seatsocc.
+    MODIFY gt_data FROM gs_data TRANSPORTING carrname currcode seatsrem class.
+    CLEAR gs_data.
+  ENDLOOP.
+
+
+ENDFORM.
+
+*&---------------------------------------------------------------------*
+
+FORM set_fcat.
+  CLEAR gs_fcat.
+  gs_fcat-fieldname = 'SEATSREM'.
+  gs_fcat-coltext = 'Seats Remain'.
+  gs_fcat-col_pos = 3.
+  APPEND gs_fcat TO gt_fcat.
+
+  CLEAR gs_fcat.
+  gs_fcat-fieldname = 'CLASS'.
+  gs_fcat-ref_field = 'CLASS'.
+  gs_fcat-ref_table = 'SBOOK'.
+  gs_fcat-col_pos = 2.
+  APPEND gs_fcat TO gt_fcat.
+
+  CLEAR gs_fcat.
+  gs_fcat-fieldname = 'PRICE'.
+  gs_fcat-do_sum = 'X'.
+  APPEND gs_fcat TO gt_fcat.
+ENDFORM.
+
+*&---------------------------------------------------------------------*
+
+FORM set_sort.
+  CLEAR gs_sort.
+  gs_sort-fieldname = 'CLASS'.
+  gs_sort-spos = 1.
+  gs_sort-up = 'X'.
+  gs_sort-subtot = 'X'.
+  APPEND gs_sort TO gt_sort.
+ENDFORM.
+```
+</br>
+
+**4) `PBO` 모듈 생성**
+```abap
+MODULE status_0100 OUTPUT.
+ SET PF-STATUS 'S100'.
+* SET TITLEBAR 'xxx'.
+ENDMODULE.
+
+*&---------------------------------------------------------------------*
+
+MODULE init_alv OUTPUT.
+  IF go_cont IS INITIAL.
+    CREATE OBJECT go_cont
+      EXPORTING
+        container_name              = 'AREA'
+      EXCEPTIONS
+        cntl_error                  = 1
+        cntl_system_error           = 2
+        create_error                = 3
+        lifetime_error              = 4
+        lifetime_dynpro_dynpro_link = 5
+        others                      = 6.
+    IF sy-subrc <> 0.
+    ENDIF.
+
+    CREATE OBJECT go_alv
+      EXPORTING
+        i_parent          = go_cont
+      EXCEPTIONS
+        error_cntl_create = 1
+        error_cntl_init   = 2
+        error_cntl_link   = 3
+        error_dp_create   = 4
+        others            = 5.
+    IF sy-subrc <> 0.
+    ENDIF.
+
+    PERFORM set_fcat.
+    PERFORM set_sort.
+    CALL METHOD go_alv->set_table_for_first_display
+      EXPORTING
+        i_structure_name              = 'ZSCARRFLIGHT_B03'
+      CHANGING
+        it_outtab                     = gt_data
+        it_fieldcatalog               = gt_fcat
+        it_sort                       = gt_sort.
+    IF sy-subrc <> 0.
+    ENDIF.
+
+  ENDIF.
+ENDMODULE.
+```
+</br>
+
+**5) `PAI` 모듈 생성**
+```abap
+MODULE user_command_0100 INPUT.
+  CASE OK_CODE.
+    WHEN 'BACK'.
+      LEAVE TO SCREEN 0.
+    WHEN OTHERS.
+  ENDCASE.
+ENDMODULE.
+
+*&---------------------------------------------------------------------*
+
+MODULE exit INPUT.
+  CASE OK_CODE.
+    WHEN 'CANCEL'.
+      LEAVE TO SCREEN 0.
+    WHEN 'EXIT'.
+      LEAVE PROGRAM.
+    WHEN OTHERS.
+  ENDCASE.
+ENDMODULE.
+```
+</br>
+
+**6) 결과 확인**
+
+<img width="500" height="146" alt="image" src="https://github.com/user-attachments/assets/326940de-3a7a-4697-9af2-cb232651886c" />
+</br>
+
+<img width="515" height="357" alt="image" src="https://github.com/user-attachments/assets/765b20d2-30a5-4a6a-a180-8d5741bd635e" />
