--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
@@ -28,36 +28,23 @@
 - `REFRESH_TABLE_DISPLAY` → ALV Grid 데이터를 다시 그리되 스크롤·선택 상태를 유지한 채 화면만 갱신하는 메서드
 - `i_soft_refresh` = 'X' : 정렬·필터·레이아웃을 유지한 채 데이터만 갱신
 - `i_soft_refresh` = space : ALV를 전체 재계산하여 정렬·필터까지 다시 적용
-```abap
-CALL METHOD <alv_ref>->refresh_table_display
-  EXPORTING
-    is_stable      = <ls_stable>
-    i_soft_refresh = 'X'
-  EXCEPTIONS
-    finished       = 1
-    others         = 2.
-```
 </br>
 
 - `LVC_S_STBL` : ALV 새로고침 시 화면 위치 고정용 구조
 - `row = 'X'` → 행(스크롤) 위치 유지
 - `col = 'X'` → 열(커서) 위치 유지
 ```abap
-DATA ls_stable TYPE lvc_s_stbl.
+********* TOP *********
+DATA ls_stable TYPE lvc_s_stbl.    
 
-ls_stable-row = 'X'.   " 행 위치 유지
-ls_stable-col = 'X'.   " 열 위치 유지
-```
-```abap
-DATA gs_stable TYPE LVC_S_STBL.    " TOP
-
-gs_stable-row = 'X'.      " PBO
-gs_stable-col = 'X'.
+********* PBO *********
+ls_stable-row = 'X'.   " 행(스크롤) 위치 유지
+ls_stable-col = 'X'.   " 열(커서) 위치 유지
 
 CALL METHOD go_alv->refresh_table_display
   EXPORTING
-    is_stable      = gs_stable
-    i_soft_refresh = 'X'
+    is_stable      = ls_stable
+    i_soft_refresh = 'X'   " 정렬·필터·레이아웃 유지
   EXCEPTIONS
     finished       = 1
     others         = 2.
