Update 프로그래밍 전용 리포트 개발(12.29).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
@@ -64,6 +64,12 @@ CALL METHOD go_alv->refresh_table_display
 ```abap
 DATA <ls_layout> TYPE lvc_s_layo.
 
+<ls_layout>-grid_title = 'Booking List'.
+<ls_layout>-zebra      = 'X'.
+<ls_layout>-cwidth_opt = 'X'.
+<ls_layout>-totals_bef = 'X'.
+<ls_layout>-sel_mode   = 'A'.
+
 CALL METHOD <alv_ref>->set_table_for_first_display
   EXPORTING
     i_structure_name = '<DDIC>'
