--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
@@ -78,20 +78,30 @@ CALL METHOD <alv_ref>->set_table_for_first_display
     it_outtab        = <itab>.
 ```
 ```abap
-DATA gs_layout TYPE LVC_S_LAYO.            " TOP
+********* TOP *********
+DATA gs_layout TYPE lvc_s_layo.
 
-gs_layout-grid_title = 'Booking List'. " Title 적용        " F01
-gs_layout-zebra = 'X'.  " Row 구분색 적용
-gs_layout-cwidth_opt = 'X'. " 컬럼너비 최적화
-gs_layout-totals_bef = 'X'. " 합계 맨 위로
-gs_layout-sel_mode = 'A'. " _,A,B,C,D 선택모드
+********* F01 *********
+FORM set_layout.
+  gs_layout-grid_title  = 'Booking List'.
+  gs_layout-zebra       = 'X'.
+  gs_layout-cwidth_opt  = 'X'.
+  gs_layout-totals_bef  = 'X'.
+  gs_layout-sel_mode    = 'A'.
 
-CALL METHOD go_alv->set_table_for_first_display            " PBO
+  gs_layout-excp_fname  = 'EXCP_FLD'.
+  gs_layout-excp_led    = 'X'.
+  gs_layout-info_fname  = 'COL_FLD'.
+  gs_layout-ctab_fname  = 'LT_SCOL'.
+ENDFORM.
+
+********* PBO *********
+CALL METHOD go_alv->set_table_for_first_display
   EXPORTING
     i_structure_name = 'SBOOK'
     is_layout        = gs_layout
   CHANGING
-    it_outtab        = gt_bookings.
+    it_outtab        = gt_data.
 ```
 </br>
 </br>
