Update 프로그래밍 전용 리포트 개발(12.29).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
@@ -83,16 +83,11 @@ DATA gs_layout TYPE lvc_s_layo.
 
 ********* F01 *********
 FORM set_layout.
-  gs_layout-grid_title  = 'Booking List'.
-  gs_layout-zebra       = 'X'.
-  gs_layout-cwidth_opt  = 'X'.
-  gs_layout-totals_bef  = 'X'.
-  gs_layout-sel_mode    = 'A'.
-
-  gs_layout-excp_fname  = 'EXCP_FLD'.
-  gs_layout-excp_led    = 'X'.
-  gs_layout-info_fname  = 'COL_FLD'.
-  gs_layout-ctab_fname  = 'LT_SCOL'.
+  gs_layout-grid_title = 'Booking List'.   " ALV 제목
+  gs_layout-zebra      = 'X'.               " 행 줄무늬
+  gs_layout-cwidth_opt = 'X'.               " 컬럼 너비 자동
+  gs_layout-totals_bef = 'X'.               " 합계 상단
+  gs_layout-sel_mode   = 'A'.               " 선택 모드 (_,A,B,C,D)
 ENDFORM.
 
 ********* PBO *********
