Update 프로그래밍 전용 리포트 개발(12.29).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
@@ -165,33 +165,44 @@ CALL METHOD <alv_ref>->set_table_for_first_display
     it_outtab = <itab>.
 ```
 ```abap
-" 예외 표시용 컬럼명 지정
-gs_layout-excp_fname = 'EXCP_FLD'.  " 아이콘 값이 들어있는 필드
-gs_layout-excp_led   = 'X'.         " LED(신호등) 아이콘 사용
+********* TOP *********
+DATA: BEGIN OF gs_data.
+        INCLUDE TYPE sbook.
+DATA: excp_fld        TYPE char1,          " 예외(신호등) 값
+      col_fld         TYPE char4,
+      lt_scol         TYPE lvc_t_scol,
+      cancelled_icon  TYPE icon-id,
+      phone           TYPE scustom-telephone,
+     END OF gs_data.
+DATA gt_data LIKE TABLE OF gs_data.
 
-CALL METHOD go_alv->set_table_for_first_display
-  EXPORTING
-    i_structure_name = 'SFLIGHT'
-    is_layout        = gs_layout
-  CHANGING
-    it_outtab        = gt_flights.
+********* F01 *********
+LOOP AT gt_data INTO gs_data.
 
-*&---------------------------------------------------------------------*
-
-LOOP AT gt_flights INTO gs_flight.
-
-  IF gs_flight-seatsocc < 50.
-    gs_flight-excp = '1'.   " 🔴 빨강
-  ELSEIF gs_flight-seatsocc <= 200.
-    gs_flight-excp = '2'.   " 🟡 노랑
+  IF gs_data-loccuram < 500.
+    gs_data-excp_fld = '1'.   " 🔴 빨강
+  ELSEIF gs_data-loccuram <= 800.
+    gs_data-excp_fld = '2'.   " 🟡 노랑
   ELSE.
-    gs_flight-excp = '3'.   " 🟢 초록
+    gs_data-excp_fld = '3'.   " 🟢 초록
   ENDIF.
 
-  MODIFY gt_flights FROM gs_flight TRANSPORTING excp.
-  CLEAR gs_flight.
+  MODIFY gt_data FROM gs_data
+    TRANSPORTING excp_fld.    " 예외 컬럼만 반영
 
+  CLEAR gs_data.
 ENDLOOP.
+
+********* F01 (LAYOUT) *********
+gs_layout-excp_fname = 'EXCP_FLD'.   " 예외 아이콘 컬럼명
+gs_layout-excp_led   = 'X'.          " LED(신호등) 아이콘
+
+********* PBO *********
+CALL METHOD go_alv->set_table_for_first_display
+  EXPORTING
+    is_layout = gs_layout
+  CHANGING
+    it_outtab = gt_data.
 ```
 </br>
 </br>
