Update 프로그래밍 전용 리포트 개발(12.29).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
@@ -235,28 +235,34 @@ CALL METHOD <alv_ref>->set_table_for_first_display
     it_sort   = gt_sort.
 ```
 ```abap
-DATA: gt_sort TYPE lvc_t_sort,
-      gs_sort TYPE lvc_s_sort.
+********* TOP *********
+DATA: gt_sorter TYPE lvc_t_sort,    " 정렬 기준 테이블
+      gs_sorter TYPE lvc_s_sort.    " 정렬 기준 구조
 
-" 1순위: ORDER_DATE 오름차순
-gs_sort-fieldname = 'ORDER_DATE'.
-gs_sort-spos      = 1.
-gs_sort-up        = 'X'.
-APPEND gs_sort TO gt_sort.
-CLEAR gs_sort.
+********* F01 *********
+FORM set_sorter.
+  IF gt_sorter IS INITIAL.
+    gs_sorter-fieldname = 'ORDER_DATE'. " 1순위 정렬 필드
+    gs_sorter-spos      = 1.            " 정렬 우선순위
+    gs_sorter-up        = 'X'.          " 오름차순
+    gs_sorter-subtot    = 'X'.          " 소계 표시
+    APPEND gs_sorter TO gt_sorter.
+    CLEAR gs_sorter.
 
-" 2순위: CUSTOMID 오름차순
-gs_sort-fieldname = 'CUSTOMID'.
-gs_sort-spos      = 2.
-gs_sort-up        = 'X'.
-APPEND gs_sort TO gt_sort.
+    gs_sorter-fieldname = 'LOCCURAM'.   " 2순위 정렬 필드
+    gs_sorter-spos      = 2.            " 정렬 우선순위
+    gs_sorter-down      = 'X'.          " 내림차순
+    APPEND gs_sorter TO gt_sorter.
+  ENDIF.
+ENDFORM.
 
-CALL METHOD go_alv_grid->set_table_for_first_display
+********* PBO *********
+CALL METHOD go_alv->set_table_for_first_display
   EXPORTING
     i_structure_name = 'SBOOK'
   CHANGING
-    it_outtab = gt_bookings
-    it_sort   = gt_sort.
+    it_outtab        = gt_data
+    it_sort          = gt_sorter.
 ```
 </br>
 </br>
