Update 프로그래밍 전용 리포트 개발(12.29).md

--- a/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
+++ b/ABAP 심화/프로그래밍 전용 리포트 개발(12.29).md
@@ -298,29 +298,81 @@ CALL METHOD <alv_ref>->set_table_for_first_display
     it_filter = gt_filter.
 ```
 ```abap
-DATA: gt_filter TYPE lvc_t_filt,
-      gs_filter TYPE lvc_s_filt.
+********* TOP *********
+DATA: gt_filter TYPE lvc_t_filt,    " ALV 필터 조건 테이블
+      gs_filter TYPE lvc_s_filt.    " ALV 필터 조건 구조
 
-" 항공사 필터
-gs_filter-fieldname = 'CARRID'.
-gs_filter-sign      = 'I'.
-gs_filter-option    = 'EQ'.
-gs_filter-low       = 'DL'.
-APPEND gs_filter TO gt_filter.
-CLEAR gs_filter.
+SELECTION-SCREEN BEGIN OF SCREEN 1100 AS SUBSCREEN.
+  SELECT-OPTIONS: so_car2 FOR SDYN_CONN-CARRID DEFAULT 'DL', " 항공사 필터
+                  so_con2 FOR SDYN_CONN-CONNID.              " 노선 필터
+SELECTION-SCREEN END OF SCREEN 1100.
 
-" 노선 필터
-gs_filter-fieldname = 'CONNID'.
-gs_filter-sign      = 'I'.
-gs_filter-option    = 'EQ'.
-gs_filter-low       = '1699'.
-APPEND gs_filter TO gt_filter.
+********* START-OF-SELECTION *********
+START-OF-SELECTION.
+  PERFORM get_data.                 " 최초 데이터 조회
+  CALL SCREEN 100.                  " 메인 화면 호출
 
-CALL METHOD go_alv_grid->set_table_for_first_display
+********* (SCREEN 100) PROCESS BEFORE OUTPUT *********
+PROCESS BEFORE OUTPUT.
+  MODULE status_0100.                            " 상태바
+  CALL SUBSCREEN SUB01 INCLUDING sy-cprog '1100'. " 필터 입력
+  MODULE init_alv.                               " ALV 출력
+
+********* (SCREEN 100) PROCESS AFTER INPUT *********
+PROCESS AFTER INPUT.
+  MODULE exit AT EXIT-COMMAND.                   " 종료 처리
+  CALL SUBSCREEN SUB01.                          " 필터 입력 반영
+  MODULE user_command_0100.                      " SEARCH 처리
+
+********* PAI *********
+MODULE user_command_0100 INPUT.
+  CASE ok_code.
+    WHEN 'SEARCH'.
+      PERFORM set_filter.           " 필터 재적용
+    WHEN 'BACK'.
+      LEAVE TO SCREEN 0.
+  ENDCASE.
+ENDMODULE.
+
+********* F01 *********
+FORM set_filter.
+  CLEAR: gt_filter, gs_filter.
+
+  IF so_car2 IS NOT INITIAL.
+    LOOP AT so_car2.
+      gs_filter-fieldname = 'CARRID'.        " 필터 컬럼
+      gs_filter-sign      = so_car2-sign.    " 포함/제외
+      gs_filter-option    = so_car2-option.  " EQ / BT
+      gs_filter-low       = so_car2-low.     " 기준값
+      gs_filter-high      = so_car2-high.    " 종료값
+      APPEND gs_filter TO gt_filter.
+    ENDLOOP.
+  ENDIF.
+
+  IF so_con2 IS NOT INITIAL.
+    CLEAR gs_filter.
+    LOOP AT so_con2.
+      gs_filter-fieldname = 'CONNID'.        " 필터 컬럼
+      gs_filter-sign      = so_con2-sign.
+      gs_filter-option    = so_con2-option.
+      gs_filter-low       = so_con2-low.
+      gs_filter-high      = so_con2-high.
+      APPEND gs_filter TO gt_filter.
+    ENDLOOP.
+  ENDIF.
+
+  CALL METHOD go_alv->set_filter_criteria
+    EXPORTING
+      it_filter = gt_filter.
+
+ENDFORM.
+
+********* PBO (INIT_ALV 내부) *********
+CALL METHOD go_alv->set_table_for_first_display
   EXPORTING
-    i_structure_name = 'SFLIGHT'
+    i_structure_name = 'SBOOK'
   CHANGING
-    it_outtab = gt_flight
+    it_outtab = gt_data
     it_filter = gt_filter.
 ```
 </br>
